removed XX:PermSize option
Signed-off-by: Juergen Rose <juergen.rose@ibh-systems.com>